cpda/vsl/css/vsl.css
#video {
    position: relative;
}

#video::before {
    content: '';
    position: absolute;
    top: 0;
    right: 0;
    width: 187px;
    height: 162px;
    background: url(../img/bolinhas-right.png) center center no-repeat;
    opacity: 0.4;
}

#references h2 {
    font-size: 20px;
    color: rgb(159, 159, 159);
}

.logos {
    max-width: 900px;
    margin: 30px auto;
}

.logos img {
    max-width: 130px;
    height: auto;
    object-fit: contain;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto;
}

#fbcomments {
    margin-top: 30px !important;
}

/*--------------------strip3------------------*/
.strip3 {
    padding: 20px 0;
    color: #fff;
    background-image: linear-gradient(to right, var(--primary-color-dark), var(--primary-color-dark), var(--primary-color-dark));
    margin-bottom: 30px;
}

@media(max-width: 991px) {
    .strip3 {
        margin-bottom: 0px;
    }
}

ul.strip3-list {
    display: flex;
    justify-content: center;
    text-align: center;
    flex-wrap: wrap;
    margin: 0;
    padding: 0;
}

ul.strip3-list li {
    padding: 0 22px;
    position: relative;
    font-size: 20px;
    line-height: 28px;
    color: #fff;
    text-align: center;
    list-style: none;
}

ul.strip3-list li::after {
    content: "";
    position: absolute;
    right: 0;
    top: 6px;
    height: 18px;
    background: #e6dede;
    width: 2px;
}

ul.strip3-list li:last-child::after {
    display: none;
}

ul.strip3-list li:nth-child(1):before {
    display: inline-block;
    vertical-align: middle;
    margin: 0 10px 4px 0;
    width: 14px;
    height: 14px;
    background: #11b142;
    border-radius: 50%;
    content: "";
    animation: fade 1s ease-in-out infinite;
}

@keyframes fade {
    0% {
        opacity: 100%;
    }

    50% {
        opacity: 30%;
    }

    70% {
        opacity: 100%;
    }

    100% {
        opacity: 100%;
    }
}

img.hourglass {
    display: inline-block;
    vertical-align: middle;
    margin: -5px 8px 0 0;
    width: 18px;
    height: 18px;
    filter: brightness(0) saturate(100%) invert(15%) sepia(95%) saturate(6932%) hue-rotate(359deg) brightness(100%) contrast(113%);
    animation: rotateP 2.5s ease-in-out forwards infinite;
}

@keyframes rotateP {
    0% {
        transform: rotate(0)
    }

    50% {
        transform: rotate(180deg)
    }

    100% {
        transform: rotate(180deg)
    }
}

@keyframes rotate {
    0% {
        transform: rotate(00deg)
    }

    100% {
        transform: rotate(360deg)
    }
}

.clock {
    margin: 0 8px -5px 0;
    display: inline-block;
    animation: fade 1s ease-in-out infinite;
}

.triangle-down {
    width: 0;
    height: 0;
    border-left: 25px solid transparent;
    border-right: 25px solid transparent;
    border-top: 50px solid #555;
}

.triangle-down {
    position: absolute;
    left: 50%;
    top: 0;
    margin-left: -15px;
    width: 0;
    height: 0;
    border-left: 15px solid transparent;
    border-right: 15px solid transparent;
    border-top: 18px solid var(--secondary-color);
}

.shipbx {
    width: 710px;
    height: 90px;
    border: 2px solid var(--secondary-color);
    border-radius: 14px;
    margin: 0 auto 0 auto;
    display: block;
    position: relative;
    padding: 17px 25px 15px 150px;
    margin-top: 40px;
    color: #000;
}

.shipiconbx {
    background: var(--secondary-color);
    padding: 19px 5px 19px 7px;
    border-radius: 12px 0 0 12px;
    position: absolute;
    left: 0;
    top: 0;
}

.shipiconbx img {
    margin: 0 auto;
    display: block;
    max-width: 100%;
}

.shipiconbx::after {
    content: "";
    position: absolute;
    right: -15px;
    top: 0;
    width: 0;
    height: 0;
    border-top: 45px solid transparent;
    border-left: 15px solid var(--secondary-color);
    border-bottom: 45px solid transparent;
}

.shipbx-txt1 {
    font-size: 22px;
    line-height: 30px;
    text-align: left;
    margin: 0;
    font-weight: 700;
}

.shipbx-txt1 .red {
    color: var(--secondary-color);
    font-weight: 700;
}

.shipbx-txt2 {
    font-size: 16px;
    line-height: 24px;
    text-align: left;
}

.item-img {
    position: relative;
}

@media(max-width: 991px) {
    .shipbx {
        width: 100%;
        height: auto;
        padding: 10px 5px 10px 98px;
        margin-top: 30px;
    }

    .shipbx-txt1 {
        font-size: 18px;
        line-height: 26px;
    }

    .shipbx-txt2 {
        font-size: 13px;
        line-height: 21px;
    }

    .shipiconbx {
        height: 100%;
        padding: 0 7px;
        align-content: center;
    }

    .shipiconbx img {
        width: 65px;
    }

    .shipiconbx::after {
        position: absolute;
        top: calc(50% - 70px);
        right: -14px;
        border-top: 70px solid transparent;
        border-left: 15px solid var(--secondary-color);
        border-bottom: 70px solid transparent;
    }

    #video h2 {
        font-size: 25px;
    }

    #video h2 span:first-child {
        font-size: 11px !important;
    }

    #fbcomments {
        margin-top: 0px !important;
    }

    .logos img {
        max-width: 90px;
        margin-bottom: 10px;
    }
}

